--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h2>Login</h2>
         <input type="email" id="loginEmail" placeholder="Enter your email">
         <input type="password" id="loginPassword" placeholder="Enter your password">
-        <button onclick="login()">Login</button>
+        <button id="loginButton">Login</button>
         <p>Don't have an account? <a href="signup.html">Sign Up</a></p>
     </div>
     <script src="script.js"></script>
