--- a/index.html
+++ b/index.html
@@ -8,12 +8,20 @@
 </head>
 <body>
     <div class="login-container">
-        <h2>Login</h2>
+        <h2>User Login</h2>
         <input type="email" id="loginEmail" placeholder="Enter your email">
         <input type="password" id="loginPassword" placeholder="Enter your password">
         <button id="loginButton">Login</button>
         <p>Don't have an account? <a href="signup.html">Sign Up</a></p>
     </div>
+
+    <div class="admin-login-container">
+        <h2>Admin Login</h2>
+        <input type="email" id="adminEmail" placeholder="Admin Email">
+        <input type="password" id="adminPassword" placeholder="Admin Password">
+        <button onclick="adminLogin()">Admin Login</button>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
