--- a/orders.html
+++ b/orders.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <h2>Admin Orders</h2>
-    <div id="ordersList"></div>
+    <div id="ordersList">No orders yet.</div>
+    <button onclick="adminLogout()">Logout</button>
+
     <script src="script.js"></script>
 </body>
 </html>
