--- a/store.html
+++ b/store.html
@@ -8,11 +8,8 @@
 </head>
 <body>
     <h2>ISKCON Bookstore</h2>
-    <div id="cart">
-        <p>Total: ₹<span id="totalAmount">0</span></p>
-        <p id="freeOffer">📖 Free Bookmark with Every Order!</p>
-        <button onclick="checkout()">Checkout</button>
-    </div>
+    <div id="storeProducts"></div>
+
     <script src="script.js"></script>
 </body>
 </html>
