--- a/admin.html
+++ b/admin.html
@@ -10,7 +10,7 @@
     <h2>Admin Login</h2>
     <input type="email" id="adminEmail" placeholder="Admin Email">
     <input type="password" id="adminPassword" placeholder="Admin Password">
-    <button onclick="adminLogin()">Admin Login</button>
+    <button onclick="adminLogin()">Login</button>
 
     <script src="script.js"></script>
 </body>
