--- a/admin.html
+++ b/admin.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Login</title>
+    <title>Admin Login - ISKCON Bookstore</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h2>Admin Login</h2>
-    <input type="email" id="adminEmail" placeholder="Admin Email">
-    <input type="password" id="adminPassword" placeholder="Admin Password">
-    <button onclick="adminLogin()">Login</button>
+    <div class="login-container">
+        <h2>Admin Login</h2>
+        <input type="email" id="adminEmail" placeholder="Admin Email">
+        <input type="password" id="adminPassword" placeholder="Admin Password">
+        <button id="adminLoginButton">Admin Login</button>
+    </div>
 
     <script src="script.js"></script>
 </body>
