--- a/admin.html
+++ b/admin.html
@@ -3,16 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Login - ISKCON Bookstore</title>
+    <title>Admin Login</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="login-container">
-        <h2>Admin Login</h2>
-        <input type="email" id="adminEmail" placeholder="Admin Email">
-        <input type="password" id="adminPassword" placeholder="Admin Password">
-        <button id="adminLoginButton">Admin Login</button>
-    </div>
+    <h2>Admin Login</h2>
+    <input type="email" id="adminEmail" placeholder="Enter Admin Email">
+    <input type="password" id="adminPassword" placeholder="Enter Admin Password">
+    <button onclick="adminLogin()">Login</button>
+    <p><a href="index.html">Back to User Login</a></p>
 
     <script src="script.js"></script>
 </body>
