--- a/orders.html
+++ b/orders.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Orders - ISKCON Bookstore</title>
+    <title>View Orders</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h2>Admin Orders</h2>
-    <div id="ordersList">No orders yet.</div>
-    <button onclick="adminLogout()">Logout</button>
+    <h2>Orders</h2>
+    <div id="ordersList"></div>
+    <button onclick="clearOrders()">Clear Orders</button>
 
     <script src="script.js"></script>
 </body>
