--- a/admin.html
+++ b/admin.html
@@ -7,12 +7,17 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h2>Admin Login</h2>
-    <input type="email" id="adminEmail" placeholder="Enter Admin Email">
-    <input type="password" id="adminPassword" placeholder="Enter Admin Password">
-    <button onclick="adminLogin()">Login</button>
-    <p><a href="index.html">Back to User Login</a></p>
+    <div class="login-container">
+        <h2>Admin Login</h2>
+        <input type="email" id="adminEmail" placeholder="Enter Admin Email">
+        <input type="password" id="adminPassword" placeholder="Enter Admin Password">
+        <button id="adminLoginButton">Login</button>
+        <p><a href="index.html">Back to User Login</a></p>
+    </div>
 
     <script src="script.js"></script>
+    <script>
+        document.getElementById("adminLoginButton").addEventListener("click", adminLogin);
+    </script>
 </body>
 </html>
