--- a/index.html
+++ b/index.html
@@ -3,34 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Page</title>
+    <title>Login</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="login-container">
+
+    <!-- User Login Section -->
+    <div id="userLogin">
         <h2>User Login</h2>
-        <input type="email" placeholder="Email" id="user-email">
-        <input type="password" placeholder="Password" id="user-password">
-        <button onclick="userLogin()">Login</button>
-        <p>Don't have an account? <a href="signup.html">Sign Up</a></p>
+        <input type="email" placeholder="Email">
+        <input type="password" placeholder="Password">
+        <button>Login</button>
+        <p>Don't have an account? <a href="#">Sign Up</a></p>
     </div>
 
-    <!-- Hidden Admin Login -->
-    <div id="admin-login">
+    <!-- Admin Login Section (Hidden by Default) -->
+    <div id="adminLogin" style="display: none;">
         <h2>Admin Login</h2>
-        <input type="email" placeholder="Admin Email" id="admin-email">
-        <input type="password" placeholder="Admin Password" id="admin-password">
-        <button onclick="adminLogin()">Admin Login</button>
+        <input type="email" placeholder="Admin Email">
+        <input type="password" placeholder="Admin Password">
+        <button>Admin Login</button>
     </div>
 
-    <script>
-        function userLogin() {
-            alert("User Login Clicked!");
-        }
+    <script src="script.js"></script>
 
-        function adminLogin() {
-            alert("Admin Login Clicked!");
-        }
-    </script>
 </body>
 </html>
