--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <p>Don't have an account? <a href="#">Sign Up</a></p>
     </div>
 
-    <!-- Admin Login Section (Hidden by Default) -->
-    <div id="adminLogin" style="display: none;">
+    <!-- Admin Login Section (Hidden Completely) -->
+    <div id="adminLogin">
         <h2>Admin Login</h2>
         <input type="email" placeholder="Admin Email">
         <input type="password" placeholder="Admin Password">
