--- a/index.html
+++ b/index.html
@@ -11,18 +11,27 @@
     <!-- User Login Section -->
     <div id="userLogin">
         <h2>User Login</h2>
-        <input type="email" placeholder="Email">
-        <input type="password" placeholder="Password">
-        <button>Login</button>
-        <p>Don't have an account? <a href="#">Sign Up</a></p>
+        <input type="email" id="userEmail" placeholder="Email">
+        <input type="password" id="userPassword" placeholder="Password">
+        <button onclick="userLogin()">Login</button>
+        <p>Don't have an account? <a href="#" onclick="showSignup()">Sign Up</a></p>
+    </div>
+
+    <!-- User Signup Section (Hidden by Default) -->
+    <div id="userSignup" style="display:none;">
+        <h2>Create Account</h2>
+        <input type="email" id="signupEmail" placeholder="Email">
+        <input type="password" id="signupPassword" placeholder="Password">
+        <button onclick="userSignup()">Sign Up</button>
+        <p>Already have an account? <a href="#" onclick="showLogin()">Login</a></p>
     </div>
 
     <!-- Admin Login Section (Hidden Completely) -->
     <div id="adminLogin">
         <h2>Admin Login</h2>
-        <input type="email" placeholder="Admin Email">
-        <input type="password" placeholder="Admin Password">
-        <button>Admin Login</button>
+        <input type="email" id="adminEmail" placeholder="Admin Email">
+        <input type="password" id="adminPassword" placeholder="Admin Password">
+        <button onclick="adminLogin()">Admin Login</button>
     </div>
 
     <script src="script.js"></script>
