--- a/product.html
+++ b/product.html
@@ -3,32 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin - Manage Products</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Products</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            background-color: #f4f4f4;
+        }
+        .product {
+            border: 1px solid #ccc;
+            padding: 20px;
+            margin: 10px;
+            background-color: white;
+            display: inline-block;
+        }
+    </style>
 </head>
 <body>
-    <h2>Admin - Manage Products</h2>
-    <button onclick="adminLogout()">Logout</button>
+    <h1>Our Products</h1>
+    <div class="product">
+        <h2>Book 1</h2>
+        <p>Price: ₹500</p>
+    </div>
+    <div class="product">
+        <h2>Book 2</h2>
+        <p>Price: ₹700</p>
+    </div>
 
-    <h3>Add New Product</h3>
-    <input type="text" id="productName" placeholder="Product Name">
-    <input type="number" id="productPrice" placeholder="Price">
-    <input type="text" id="productImage" placeholder="Image URL">
-    <button onclick="addProduct()">Add Product</button>
-
-    <h3>Product List</h3>
-    <table border="1">
-        <thead>
-            <tr>
-                <th>Name</th>
-                <th>Price</th>
-                <th>Image</th>
-                <th>Actions</th>
-            </tr>
-        </thead>
-        <tbody id="productList"></tbody>
-    </table>
-
-    <script src="script.js"></script>
+    <br>
+    <a href="index.html">Logout</a> <!-- Redirects back to login -->
 </body>
 </html>
