--- a/index.html
+++ b/index.html
@@ -3,38 +3,97 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Login Page</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #6c6997;
+            text-align: center;
+        }
+        .container {
+            width: 300px;
+            margin: 50px auto;
+            padding: 20px;
+            background: white;
+            border-radius: 10px;
+            box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
+        }
+        input {
+            width: 100%;
+            padding: 10px;
+            margin: 5px 0;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+        button {
+            width: 100%;
+            padding: 10px;
+            background-color: #5c67f2;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        button:hover {
+            background-color: #4a54e1;
+        }
+        a {
+            text-decoration: none;
+            color: #5c67f2;
+        }
+    </style>
 </head>
 <body>
 
-    <!-- User Login Section -->
-    <div id="userLogin">
+    <div class="container">
         <h2>User Login</h2>
-        <input type="email" id="userEmail" placeholder="Email">
-        <input type="password" id="userPassword" placeholder="Password">
-        <button onclick="userLogin()">Login</button>
-        <p>Don't have an account? <a href="#" onclick="showSignup()">Sign Up</a></p>
+        <form id="userLoginForm">
+            <input type="email" id="userEmail" placeholder="Email" required>
+            <input type="password" id="userPassword" placeholder="Password" required>
+            <button type="submit">Login</button>
+        </form>
+        <p>Don't have an account? <a href="signup.html">Sign Up</a></p>
     </div>
 
-    <!-- User Signup Section (Hidden by Default) -->
-    <div id="userSignup" style="display:none;">
-        <h2>Create Account</h2>
-        <input type="email" id="signupEmail" placeholder="Email">
-        <input type="password" id="signupPassword" placeholder="Password">
-        <button onclick="userSignup()">Sign Up</button>
-        <p>Already have an account? <a href="#" onclick="showLogin()">Login</a></p>
-    </div>
-
-    <!-- Admin Login Section (Hidden Completely) -->
-    <div id="adminLogin">
+    <div class="container">
         <h2>Admin Login</h2>
-        <input type="email" id="adminEmail" placeholder="Admin Email">
-        <input type="password" id="adminPassword" placeholder="Admin Password">
-        <button onclick="adminLogin()">Admin Login</button>
+        <form id="adminLoginForm">
+            <input type="email" id="adminEmail" placeholder="Admin Email" required>
+            <input type="password" id="adminPassword" placeholder="Admin Password" required>
+            <button type="submit">Admin Login</button>
+        </form>
     </div>
 
-    <script src="script.js"></script>
+    <script>
+        document.getElementById("userLoginForm").addEventListener("submit", function(event) {
+            event.preventDefault();
+            let email = document.getElementById("userEmail").value;
+            let password = document.getElementById("userPassword").value;
+
+            let storedEmail = localStorage.getItem("userEmail");
+            let storedPassword = localStorage.getItem("userPassword");
+
+            if (email === storedEmail && password === storedPassword) {
+                alert("User login successful!");
+                window.location.href = "products.html"; // Redirect to products page
+            } else {
+                alert("Invalid email or password!");
+            }
+        });
+
+        document.getElementById("adminLoginForm").addEventListener("submit", function(event) {
+            event.preventDefault();
+            let adminEmail = document.getElementById("adminEmail").value;
+            let adminPassword = document.getElementById("adminPassword").value;
+
+            if (adminEmail === "admin@example.com" && adminPassword === "admin123") {
+                alert("Admin login successful!");
+                window.location.href = "admin-dashboard.html"; // Redirect to admin dashboard
+            } else {
+                alert("Invalid admin credentials!");
+            }
+        });
+    </script>
 
 </body>
 </html>
