--- a/signup.html
+++ b/signup.html
@@ -3,18 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign Up - ISKCON Bookstore</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Sign Up</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #6c6997;
+            text-align: center;
+        }
+        .container {
+            width: 300px;
+            margin: 50px auto;
+            padding: 20px;
+            background: white;
+            border-radius: 10px;
+            box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
+        }
+        input {
+            width: 100%;
+            padding: 10px;
+            margin: 5px 0;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+        button {
+            width: 100%;
+            padding: 10px;
+            background-color: #5c67f2;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        button:hover {
+            background-color: #4a54e1;
+        }
+    </style>
 </head>
 <body>
-    <div class="signup-container">
-        <h2>Create an Account</h2>
-        <input type="email" id="signupEmail" placeholder="Enter your email">
-        <input type="password" id="signupPassword" placeholder="Enter your password">
-        <input type="password" id="confirmPassword" placeholder="Confirm your password">
-        <button onclick="signUp()">Sign Up</button>
+
+    <div class="container">
+        <h2>Sign Up</h2>
+        <form id="signupForm">
+            <input type="email" id="newEmail" placeholder="Enter Email" required>
+            <input type="password" id="newPassword" placeholder="Enter Password" required>
+            <button type="submit">Sign Up</button>
+        </form>
         <p>Already have an account? <a href="index.html">Login</a></p>
     </div>
-    <script src="script.js"></script>
+
+    <script>
+        document.getElementById("signupForm").addEventListener("submit", function(event) {
+            event.preventDefault();
+            let email = document.getElementById("newEmail").value;
+            let password = document.getElementById("newPassword").value;
+
+            // Save credentials to localStorage
+            localStorage.setItem("userEmail", email);
+            localStorage.setItem("userPassword", password);
+
+            alert("Account created successfully! You can now log in.");
+            window.location.href = "index.html"; // Redirect to login page
+        });
+    </script>
+
 </body>
 </html>
